--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,3 +38,18 @@ jobs:
         if [ ${#output} -gt 0 ]; then
           git add . && git commit -m "Added widgets" && git push
         fi
+    - name: Azure Login
+      uses: Azure/login@v1
+      with:
+        # Paste output of `az ad sp create-for-rbac` as value of secret variable: AZURE_CREDENTIALS
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+    - name: Deploy Azure Resource Manager (ARM) Template
+      uses: Azure/arm-deploy@v1
+      with:
+        scope: resourcegroup
+        subscriptionId: ${{ secrets.SUBSCRIPTION_ID }}
+        region: eastus2
+        resourceGroupName: dashboards
+        template: arm-templates/deployTemplate.json
+        deploymentMode: Validate
+        deploymentName: Dashboard
