--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,8 +6,8 @@ name: Build Markdown widgets
 on:
   push:
     paths: 
-      - widgets/*
-      - scripts/*
+      - 'widgets/**'
+      - 'scripts/**'
     branches-ignore: 
       - main
 
