--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,10 @@ on:
     branches-ignore: 
       - main
 
+env:
+  AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
+  SUBSCRIPTION_ID: ${{ secrets.SUBSCRIPTION_ID }}
+
 jobs:
   Build:
 
@@ -42,12 +46,12 @@ jobs:
       uses: Azure/login@v1
       with:
         # Paste output of `az ad sp create-for-rbac` as value of secret variable: AZURE_CREDENTIALS
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+        creds: ${{ env.AZURE_CREDENTIALS }}
     - name: Deploy Azure Resource Manager (ARM) Template
       uses: Azure/arm-deploy@v1
       with:
         scope: resourcegroup
-        subscriptionId: ${{ secrets.SUBSCRIPTION_ID }}
+        subscriptionId: ${{ env.SUBSCRIPTION_ID }}
         region: eastus2
         resourceGroupName: dashboards
         template: arm-templates/deployTemplate.json
