--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -4,22 +4,18 @@
 name: Build
 
 on:
+  pull_request:
   push:
-    paths: 
-      - 'widgets/**'
-      - 'scripts/**'
-    branches-ignore: 
-      - main
-
+    branches:
+      - master
+    
 env:
   AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
   SUBSCRIPTION_ID: ${{ secrets.SUBSCRIPTION_ID }}
 
 jobs:
   Build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
       with:
@@ -45,7 +41,6 @@ jobs:
     - name: Azure Login
       uses: Azure/login@v1
       with:
-        # Paste output of `az ad sp create-for-rbac` as value of secret variable: AZURE_CREDENTIALS
         creds: ${{ env.AZURE_CREDENTIALS }}
     - name: Deploy Azure Resource Manager (ARM) Template
       uses: Azure/arm-deploy@v1
@@ -57,3 +52,24 @@ jobs:
         template: arm-templates/deployTemplate.json
         deploymentMode: Validate
         deploymentName: Dashboard
+  
+  Deploy:
+    needs: Build
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
+    runs-on: ubuntu-latest
+    steps:
+    - name: Azure Login
+      uses: Azure/login@v1
+      with:
+        creds: ${{ env.AZURE_CREDENTIALS }}
+    - name: Deploy Azure Resource Manager (ARM) Template
+      uses: Azure/arm-deploy@v1
+      with:
+        scope: resourcegroup
+        subscriptionId: ${{ env.SUBSCRIPTION_ID }}
+        region: eastus2
+        resourceGroupName: dashboards
+        template: arm-templates/deployTemplate.json
+        deploymentMode: Validate
+        deploymentName: Dashboard
+
