--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
   push:
     branches:
-      - master
+      - main
     
 env:
   AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
