--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -5,9 +5,21 @@ name: Build
 
 on:
   pull_request:
+    paths:
+      - arm-templates
+      - data
+      - scripts
+      - templates
+      - widgets
   push:
     branches:
       - main
+    paths:
+      - arm-templates
+      - data
+      - scripts
+      - templates
+      - widgets
     
 env:
   AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
