--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -73,6 +73,6 @@ jobs:
         region: eastus2
         resourceGroupName: dashboards
         template: arm-templates/deployTemplate.json
-        deploymentMode: Validate
+        deploymentMode: Incremental
         deploymentName: Dashboard
 
