--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -6,11 +6,8 @@ name: Build
 on:
   push:
     paths:
-      - 'arm-templates/**'
-      - 'data/**'
-      - 'scripts/**'
-      - 'templates/**'
-      - 'widgets/**'    
+      - 'widgets/**'
+
 env:
   AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
   SUBSCRIPTION_ID: ${{ secrets.SUBSCRIPTION_ID }}
@@ -31,7 +28,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install jinja2 requests
     - name: Build
-      run: python scripts/build.py
+      run: python widgets/scripts/build.py
     - name: Commit changes
       run: |
         git config --global user.email "you@example.com"
